--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
 	url: https://Whitenut200.github.io/categories/
   - title: "태그"
 	url: https://Whitenut200.github.io/tags/
-  - title: "About"
-  url: https://Whitenut200.github.io/about/
+  # - title: "About"
+  #   url: https://Whitenut200.github.io/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
