--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
-  - title: "카테고리"
+  - title: "Category"
 	url: https://Whitenut200.github.io/categories/
-  - title: "태그"
+  - title: Tag"
 	url: https://Whitenut200.github.io/tags/
   # - title: "About"
   #   url: https://Whitenut200.github.io/about/
