--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Category"
-	  url: https://Whitenut200.github.io/categories/
-  - title: Tag"
-	  url: https://Whitenut200.github.io/tags/
+  - title: "Catagory"
+    url: /Catagories/
+  - title: "Tag"
+    url: /tags/
   # - title: "About"
   #   url: https://Whitenut200.github.io/about/
   # - title: "Sample Posts"
